Fix 100vw scrollbar error

--- a/src/Formcss.module.css
+++ b/src/Formcss.module.css
@@ -8,7 +8,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      width: 100vw;
+      width: 100%;
       height: fit-content;
   }
   .form{
